<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- App -->
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Library</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="reserve_title">Reserve: </string>
    <string name="reserve_button">Reserve</string>
    
<!--  BookList  -->
    <string name="book_list_title_book">Title: </string> 
    <string name="book_list_author_book">Author: </string>
    <string name="book_list_state_book">State: </string>
    <string name="book_list_detail_button">Show Details</string>
    
<!--  Book Comment Item  -->
	<string name="book_comment_item_user_name">User: </string>
	<string name="book_comment_item_description">Comment: </string>
	<string name="planet_prompt">Score</string>
	
<!--  Book Detail	-->
	<string name="book_detail_default_title">no title</string>
	<string name="book_detail_default_author">no author</string>
	<string name="book_detail_default_desc">no description</string>
	<string name="book_detail_isbn_title">ISBN: </string>
	<string name="book_detail_comments_title">Comments: </string>
	
	
<!--  To Comment Book	-->
	<string name="to_comment_book_title">Comment: </string>
	<string name="to_comment_book_edit_txt_hint">Input Text </string>
	<string name="to_comment_book_submmit_button">To Comment </string>
	<string name="to_comment_book_title_char_left">Char Left: </string>
	
<!--  Registration	-->
	<string name="register_title">Registration</string>
	<string name="register_username">User Name: </string>
	
	
</resources>
