<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#FFFFFF">
  	
  	<TextView
  		android:id="@+id/to_comment_book_title_book"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="book title"
  		android:textSize="20dip"
  		android:layout_marginTop="5dip"
  		android:layout_marginLeft="5dip"
  		android:textColor="#000000">
  	</TextView>

  
  	<TextView
  		android:id="@+id/to_comment_book_title"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="5dip"
  		android:layout_marginLeft="5dip"
  		android:layout_below="@id/to_comment_book_title_book"
  		android:text="@string/to_comment_book_title"
  		android:textColor="#000000">
  	</TextView>
  	
  	<Spinner
		android:id="@+id/myspinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawSelectorOnTop="true"
		android:layout_alignParentRight="true"
		android:prompt="@string/planet_prompt"/>
	

  	
  	
  	<EditText
  		android:id="@+id/to_comment_book_edit_text"
  		android:layout_width="fill_parent"
  		android:layout_height="100dip"
  		android:layout_marginTop="5dip"
  		android:layout_marginLeft="5dip"
  		android:layout_marginRight="5dip"
  		android:maxLength="100"
  		android:layout_below="@id/to_comment_book_title"
  		android:hint="@string/to_comment_book_edit_txt_hint">
  	</EditText>

  	
  	<TextView
  		android:id="@+id/to_comment_text_char_left"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginLeft="5dip"
  		android:layout_below="@id/to_comment_book_edit_text"
  		android:text="char"
  		android:layout_marginRight="5dip"
  		android:layout_alignParentRight="true"
  		android:textColor="#000000">
  	</TextView>  	
  	  	
  	<TextView
  		android:id="@+id/to_comment_title_char_left"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginLeft="5dip"
		android:layout_toLeftOf="@id/to_comment_text_char_left"
  		android:layout_below="@id/to_comment_book_edit_text"
  		android:text="@string/to_comment_book_title_char_left"
  		android:textColor="#000000">
  	</TextView>
  	
  	<Button
  		android:id="@+id/to_comment_book_submmit_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/to_comment_book_edit_text"
  		android:layout_marginTop="15dip"
  		android:layout_marginLeft="5dip"
  		android:background="#000000"
  		android:textColor="#FFFFFF"
  		android:padding="5dip"
  		android:text="@string/to_comment_book_submmit_button">
  	</Button>
  	
    
</RelativeLayout>
