<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#FFFFFF">
  
  	<RelativeLayout
  		android:id="@+id/book_detail_relative1"
	 	android:layout_width="fill_parent"
	 	
	 	android:paddingBottom="5dip"
	 	android:background="#D8D8D8"
	 	android:layout_height="wrap_content">
	 	
	 	<ImageView
	 		android:id="@+id/book_detail_picture"
	 		android:layout_width="wrap_content"
	 		android:src="@drawable/not_picture_book"
	 		android:layout_marginBottom="5dip"
  			android:layout_height="wrap_content">
	 	</ImageView>
	 	
	 	<TextView
	 		android:id="@+id/book_detail_ISBN_book"
	 		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="5dip"
  			android:textColor="#000000"
  			android:layout_toRightOf="@id/book_detail_picture"
  			android:text="@string/book_detail_isbn_title">
	 	</TextView>
	 	
	 	<TextView
	 		android:id="@+id/book_detail_ISBN_book_tv"
	 		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="5dip"
  			android:textColor="#000000"
  			android:layout_toRightOf="@id/book_detail_ISBN_book"
  			android:text="Book ISBN">
	 	</TextView>	 	
	 	
	 	<TextView
	 		android:id="@+id/book_detail_title_book"
	 		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="5dip"
  			android:textColor="#000000"
  			android:layout_marginTop="5dip"
  			android:layout_below="@id/book_detail_ISBN_book_tv"
  			android:layout_toRightOf="@id/book_detail_picture"
  			android:text="@string/book_detail_default_title">
	 	</TextView>
	 	<TextView
	 		android:id="@+id/book_detail_author_book"
	 		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="5dip"
  			android:layout_marginTop="5dip"
  			android:textColor="#000000"
  			android:layout_below="@id/book_detail_title_book"
  			android:layout_toRightOf="@id/book_detail_picture"
  			android:text="@string/book_detail_default_author">
	 	</TextView>	 	
	 	<TextView
	 		android:id="@+id/book_detail_state_book"
	 		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="5dip"
  			android:layout_marginTop="5dip"
  			android:textColor="#000000"
  			android:layout_below="@id/book_detail_author_book"
  			android:layout_toRightOf="@id/book_detail_picture"
  			android:text="state">
	 	</TextView>	 	
	 	
	 	<com.library.android.view.CommentBookListView
	  		android:id="@+id/book_detail_content_comment"
	  		android:layout_below="@+id/book_detail_state_book"
	  		android:layout_width="fill_parent"
	  		android:layout_marginTop="5dip"
	  		android:layout_height="wrap_content"/>
	 	
  	</RelativeLayout>
  
  	
</RelativeLayout>
